--- a/Sample_ML_Submission_Template.ipynb
+++ b/Sample_ML_Submission_Template.ipynb
@@ -430,7 +430,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "df.dtypes"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
