--- a/Sample_ML_Submission_Template.ipynb
+++ b/Sample_ML_Submission_Template.ipynb
@@ -240,9 +240,20 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "https://github.com/avinashpatni000/Netflix_EDA"
+      ],
+      "metadata": {
+        "id": "VNRNLVqFeoXR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "*Provide* your GitHub Link here."
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
